route/01service_nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
  name: nginx-pod
spec:
  containers:
  - image: docker.io/library/nginx
    imagePullPolicy: Always
    name: nginx-cont
    ports:
    - containerPort: 80
      protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-svc
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 80
